--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Daniel Schmidt
 #show_downloads: true
 logo: /assets/img/daniel_head.jpg
-theme: jekyll-theme-minima
+theme: jekyll-theme-cayman
